--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
             <div class="conteiner">
             <h2 class="section-title">Особенности</h2>
             <ul class="no-style features">
-                <li>
+                <li class="item">
                     <h3 class="features-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
+                <li class="item">
                     <h3 class="features-title">ПУНКТУАЛЬНОСТЬ</h3>
                     <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
+                <li class="item">
                     <h3 class="features-title">ПЛАНИРОВАНИЕ</h3>
                     <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
+                <li class="item">
                     <h3 class="features-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                     <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li> 
