--- a/portfolio.html
+++ b/portfolio.html
@@ -63,49 +63,49 @@
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio2.jpg" alt="двое мужчин из разных команд играют в баскетбол" width="370">
-                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <h3 class="example">Постер New Orlean vs Golden Star</h3>
                     <p class="example-type">Дизайн</p>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio3.jpg" alt="логотип ресторана морепродуктов" width="370">
-                    <h3>Ресторан Seafood</h3>
+                    <h3 class="example">Ресторан Seafood</h3>
                     <p class="example-type">Приложение</p>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio4.jpg" alt="наушники" width="370">
-                    <h3>Проект Prime</h3>
+                    <h3 class="example">Проект Prime</h3>
                     <p class="example-type">Маркетинг</p>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio5.jpg" alt="две коробки" width="370">
-                    <h3>Проект Boxes</h3>
+                    <h3 class="example">Проект Boxes</h3>
                     <p class="example-type">Приложение</p>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio6.jpg" alt="экран компьютера" width="370">
-                    <h3>Inspiration has no Borders</h3>
+                    <h3 class="example">Inspiration has no Borders</h3>
                     <p class="example-type">Веб-сайт</p>
                 </li>
                 
                 <li class="item"> 
                     <img class="utilities" src="./images/portfolio7.jpg" alt="раскрытый журнал" width="370">
-                    <h3>Издание Limited Edition</h3>
+                    <h3 class="example">Издание Limited Edition</h3>
                     <p class="example-type">Дизайн</p>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio8.jpg" alt="белая лейба с надписью" width="370">
-                    <h3>Проект LAB</h3>
+                    <h3 class="example">Проект LAB</h3>
                     <p class="example-type">Маркетинг</p>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio9.jpg" alt="руки печатают на наоутбуке" width="370">
-                    <h3>Growing Business</h3>
+                    <h3 class="example">Growing Business</h3>
                     <p class="example-type">Приложение</p>
                 </li>
             </ul>
