--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!--Герой -->
         <div class="hero">
             <section class="hero-section conteiner">
-                <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button class="hero-button" type="button">Заказать услугу</button>
             </section>
         </div>
@@ -46,7 +46,7 @@
         <!--Особенности-->
         <section class="section">
             <div class="conteiner">
-            <h2 class="section-title">Особенности</h2>
+            <h2 class="section-title visually-hidden">Особенности</h2>
             <ul class="no-style features">
                 <li class="item">
                     <h3 class="features-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
@@ -73,9 +73,9 @@
             <div class="conteiner">
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="no-style areas-of-work">
-                <li><img src="./images/box1.jpg" alt="человек работает за компьютером, рядом на листе бумаге изображена схема алгоритма" width="370"></li>
-                <li><img src="./images/box2.jpg" alt="человек держит в одной руке сматфон, а другой работает за нойтбуком" width="370"></li>
-                <li><img src="./images/box3.jpg" alt="человек дерит в руках планшет с изображением цветовой палитры" width="370"></li>
+                <li class="areas-of-work-item"><img src="./images/box1.jpg" alt="человек работает за компьютером, рядом на листе бумаге изображена схема алгоритма" width="370"></li>
+                <li class="areas-of-work-item"><img src="./images/box2.jpg" alt="человек держит в одной руке сматфон, а другой работает за нойтбуком" width="370"></li>
+                <li class="areas-of-work-item"><img src="./images/box3.jpg" alt="человек дерит в руках планшет с изображением цветовой палитры" width="370"></li>
             </ul>
             </div>
         </section>
@@ -85,22 +85,22 @@
             <div class="conteiner">
             <h2 class="section-team-title">Наша команда</h2>
             <ul class="no-style team-list">
-                <li>
+                <li class="team-card">
                     <img src="./images/card1.jpg" alt="мужчина с темными волосами, с бородой и в очках, в бордовой рубашке" width="270">
                     <h3 class="team-name">Игорь Демьяненко</h3>
                     <p lang="en" class="team-position">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/card2.jpg" alt="женщина со светлыми влосами, в очках, и в черном пиджаке" width="270">
                     <h3 class="team-name">Ольга Репина</h3>
                     <p lang="en" class="team-position">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/card3.jpg" alt="мужчина, шатен, в белой рубашке" width="270">
                     <h3 class="team-name">Николай Тарасов</h3>
                     <p lang="en" class="team-position">Marketing</p>
                 </li>
-                <li>
+                <li class="team-card">
                     <img src="./images/card4.jpg" alt="мужчина, брюнет с бородой, в очках, и в черной футболке" width="270">
                     <h3 class="team-name">Михаил Ермаков</h3>
                     <p lang="en" class="team-position">UI Designer</p>
