--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
         
             <ul class="no-style portfolio-exaples">
                 <li class="item">
-                    <img src="./images/portfolio1.jpg" alt="открытый ноутбук" width="370">
+                    <img class="utilities" src="./images/portfolio1.jpg" alt="открытый ноутбук" width="370">
                     <h3 class="example">Технокряк</h3>
                     <p class="example-type">Веб-сайт</p>
                 </li>
@@ -112,6 +112,7 @@
     </section>
 
 </main>
+
 
 
     <!--Подвал-->
