--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         <!--Герой -->
         <div class="hero">
             <section class="hero-section conteiner">
+                <div class="hero-content">
                 <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button class="hero-button" type="button">Заказать услугу</button>
+                </div>
             </section>
         </div>
 
@@ -69,8 +71,8 @@
         </section>
 
         <!--Чем мы занимаемся-->
-        <section class="section">
-            <div class="conteiner">
+        <section class="section ">
+            <div class="conteiner areas-of-work-cont">
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="no-style areas-of-work">
                 <li class="areas-of-work-item"><img src="./images/box1.jpg" alt="человек работает за компьютером, рядом на листе бумаге изображена схема алгоритма" width="370"></li>
@@ -87,23 +89,31 @@
             <ul class="no-style team-list">
                 <li class="team-card">
                     <img src="./images/card1.jpg" alt="мужчина с темными волосами, с бородой и в очках, в бордовой рубашке" width="270">
+                    <div class="team-card-discription">
                     <h3 class="team-name">Игорь Демьяненко</h3>
                     <p lang="en" class="team-position">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-card">
                     <img src="./images/card2.jpg" alt="женщина со светлыми влосами, в очках, и в черном пиджаке" width="270">
+                    <div class="team-card-discription">
                     <h3 class="team-name">Ольга Репина</h3>
                     <p lang="en" class="team-position">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team-card">
                     <img src="./images/card3.jpg" alt="мужчина, шатен, в белой рубашке" width="270">
+                    <div class="team-card-discription">
                     <h3 class="team-name">Николай Тарасов</h3>
                     <p lang="en" class="team-position">Marketing</p>
+                    </div>
                 </li>
                 <li class="team-card">
                     <img src="./images/card4.jpg" alt="мужчина, брюнет с бородой, в очках, и в черной футболке" width="270">
+                    <div class="team-card-discription">
                     <h3 class="team-name">Михаил Ермаков</h3>
                     <p lang="en" class="team-position">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
@@ -115,12 +125,13 @@
         <footer class="footer">
             <div class="conteiner">
                 <a class="logo-footer" href="./index.html"><span class="accent">Web</span>Studio</a>
-                <address class="footer-contacts">
-                    <ul class="no-style">
-                        <li><a class="footer-contacts-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li><a class="footer-contacts" href="mailto:info@devstudio.com">info@example.com</a></li>
-                        <li><a class="footer-contacts" href="tel:+380961111111">+38 099 111 11 11</a></li>
-                    </ul>
+                    <div>
+                        <ul class="no-style">
+                            <li><a class="footer-contacts-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li><a class="footer-contacts" href="mailto:info@devstudio.com">info@example.com</a></li>
+                            <li><a class="footer-contacts" href="tel:+380961111111">+38 099 111 11 11</a></li>
+                        </ul>
+                    </div>
                 </address>
             </div>
         </footer>
