--- a/portfolio.html
+++ b/portfolio.html
@@ -57,56 +57,74 @@
             <ul class="no-style portfolio-exaples">
                 <li class="item">
                     <img class="utilities" src="./images/portfolio1.jpg" alt="открытый ноутбук" width="370">
+                    <div class="portfolio-card-discription">
                     <h3 class="example">Технокряк</h3>
                     <p class="example-type">Веб-сайт</p>
+                    </div>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio2.jpg" alt="двое мужчин из разных команд играют в баскетбол" width="370">
+                    <div class="portfolio-card-discription">
                     <h3 class="example">Постер New Orlean vs Golden Star</h3>
                     <p class="example-type">Дизайн</p>
+                    </div>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio3.jpg" alt="логотип ресторана морепродуктов" width="370">
+                    <div class="portfolio-card-discription">
                     <h3 class="example">Ресторан Seafood</h3>
                     <p class="example-type">Приложение</p>
+                    </div>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio4.jpg" alt="наушники" width="370">
+                    <div class="portfolio-card-discription">
                     <h3 class="example">Проект Prime</h3>
                     <p class="example-type">Маркетинг</p>
+                    </div>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio5.jpg" alt="две коробки" width="370">
+                    <div class="portfolio-card-discription">
                     <h3 class="example">Проект Boxes</h3>
                     <p class="example-type">Приложение</p>
+                </div>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio6.jpg" alt="экран компьютера" width="370">
+                    <div class="portfolio-card-discription">
                     <h3 class="example">Inspiration has no Borders</h3>
                     <p class="example-type">Веб-сайт</p>
+                    </div>
                 </li>
                 
                 <li class="item"> 
                     <img class="utilities" src="./images/portfolio7.jpg" alt="раскрытый журнал" width="370">
+                    <div class="portfolio-card-discription">
                     <h3 class="example">Издание Limited Edition</h3>
                     <p class="example-type">Дизайн</p>
+                    </div>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio8.jpg" alt="белая лейба с надписью" width="370">
+                    <div class="portfolio-card-discription">
                     <h3 class="example">Проект LAB</h3>
                     <p class="example-type">Маркетинг</p>
+                    </div>
                 </li>
 
                 <li class="item">
                     <img class="utilities" src="./images/portfolio9.jpg" alt="руки печатают на наоутбуке" width="370">
+                    <div class="portfolio-card-discription">
                     <h3 class="example">Growing Business</h3>
                     <p class="example-type">Приложение</p>
+                    </div>
                 </li>
             </ul>
     </section>
@@ -120,11 +138,13 @@
             <div class="conteiner">
                 <a class="logo-footer" href="./index.html"><span class="accent">Web</span>Studio</a>
                 <address class="footer-contacts">
+                    <div>
                     <ul class="no-style">
                         <li><a class="footer-contacts-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
                         <li><a class="footer-contacts" href="mailto:info@devstudio.com">info@example.com</a></li>
                         <li><a class="footer-contacts" href="tel:+380961111111">+38 099 111 11 11</a></li>
                     </ul>
+                    </div>
                 </address>
             </div>
         </footer>
