Добавляет правки после проверки ментором2

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         <footer class="footer">
             <div class="conteiner">
                 <a class="logo-footer" href="./index.html"><span class="accent">Web</span>Studio</a>
+                <address class="footer-contacts">
                     <div>
                         <ul class="no-style">
                             <li><a class="footer-contacts-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
