--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <address class="footer-contacts">
                     <div>
                         <ul class="no-style">
-                            <li><a class="footer-contacts-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li><a class="footer-contacts-address" target="_blank" rel="noopener" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
                             <li><a class="footer-contacts" href="mailto:info@devstudio.com">info@example.com</a></li>
                             <li><a class="footer-contacts" href="tel:+380961111111">+38 099 111 11 11</a></li>
                         </ul>
