Добавляет правки после проверки ментором. Второй раз

--- a/index.html
+++ b/index.html
@@ -36,17 +36,16 @@
         
     <main>
         <!--Герой -->
-        <div class="hero">
-            <section class="hero-section conteiner">
+            <section class="hero-section">
                 <div class="hero-content">
                 <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button class="hero-button" type="button">Заказать услугу</button>
                 </div>
             </section>
-        </div>
+    
 
         <!--Особенности-->
-        <section class="section">
+        <section class="section-features">
             <div class="conteiner">
             <h2 class="section-title visually-hidden">Особенности</h2>
             <ul class="no-style features">
@@ -71,8 +70,8 @@
         </section>
 
         <!--Чем мы занимаемся-->
-        <section class="section ">
-            <div class="conteiner areas-of-work-cont">
+        <section class="section-areas-of-work">
+            <div class="conteiner">
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="no-style areas-of-work">
                 <li class="areas-of-work-item"><img src="./images/box1.jpg" alt="человек работает за компьютером, рядом на листе бумаге изображена схема алгоритма" width="370"></li>
@@ -126,13 +125,11 @@
             <div class="conteiner">
                 <a class="logo-footer" href="./index.html"><span class="accent">Web</span>Studio</a>
                 <address class="footer-contacts">
-                    <div>
                         <ul class="no-style">
-                            <li><a class="footer-contacts-address" target="_blank" rel="noopener" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li><a class="footer-contacts-address" target="_blank" rel="noopener noreferrer" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
                             <li><a class="footer-contacts" href="mailto:info@devstudio.com">info@example.com</a></li>
                             <li><a class="footer-contacts" href="tel:+380961111111">+38 099 111 11 11</a></li>
                         </ul>
-                    </div>
                 </address>
             </div>
         </footer>
